plugins {
    id 'java'
    id 'war'
}

group = 'com.team3'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    springVersion = '5.3.37'
    mybatisVersion = '3.5.16'
    mybatisSpringVersion = '2.1.2'
    lombokVersion = '1.18.32'
    junitVersion = '5.10.2'
    slf4jVersion = '1.7.36'
    logbackVersion = '1.2.13'
    jacksonVersion = '2.17.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    // Spring
    implementation("org.springframework:spring-context:${springVersion}") {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"
    implementation "org.springframework:spring-tx:${springVersion}"
    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // Swagger
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    //security
    implementation 'org.springframework.security:spring-security-core:5.8.13'
    implementation 'org.springframework.security:spring-security-web:5.8.13'
    implementation 'org.springframework.security:spring-security-config:5.8.13'
    implementation 'org.springframework.security:spring-security-crypto:5.8.13'

    // Dependency Injection
    implementation 'javax.inject:javax.inject:1'

    // Servlet: Tomcat 9에서 제공
    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'

    // MyBatis
    implementation "org.mybatis:mybatis:${mybatisVersion}"
    implementation "org.mybatis:mybatis-spring:${mybatisSpringVersion}"

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j:8.4.0'

    //Redis
    implementation 'org.springframework.data:spring-data-redis:2.7.18'
    implementation 'io.lettuce:lettuce-core:6.2.6.RELEASE'

    // Flyway
    implementation 'org.flywaydb:flyway-core:12.3.0'
    implementation 'org.flywaydb:flyway-mysql:12.3.0'

    // Connection Pool
    implementation 'com.zaxxer:HikariCP:5.1.0'

    // JSON
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Validation
    implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
    implementation 'org.glassfish:javax.el:3.0.1-b12'

    // Logging
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Test
    testImplementation "org.springframework:spring-test:${springVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'org.springframework.security:spring-security-test:5.8.13'
    testImplementation 'org.springframework:spring-test:5.3.39'

    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"


}

test {
    useJUnitPlatform()
}
